Fixed loading alternate configurations
* Fix writing alternate config files i.e. when -config argument is used

  Previously the default.cfg is truncated to empty file in that case,
  and the alternate config file is not updated.

* Add classic Doom key controls configuration support (classic.cfg)

  Classic Doom key controls are using the arrow keys instead of WASD.
  Added mapping to arrow keys in vanilla key behavior mode.

* Fix/suppress some compile warnings, remove deprecated API usage

  Removed deprecated API calls to make sure Mocha Doom will compile with future Java versions.